2018-07-13  Jean Brefort  <jean.brefort@normalesup.org>

	* plugins/plot_distrib/gog-boxplot.c (gog_box_plot_view_render): do
	not display whiskers when there are only ouliers outside of the box. Fixes
	#345.

2018-05-17  Morten Welinder  <terra@gnome.org>

	* goffice/app/go-plugin.c (go_plugins_shutdown): Avoid hash order
	dependency.

2018-05-10  Morten Welinder  <terra@gnome.org>

	* goffice/app/file.c (go_file_saver_for_file_name): Pick the most
	capable saver if multiple are possible.

2018-05-07  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2018-05-07  Morten Welinder <terra@gnome.org>

	* Release 0.10.41

2018-05-06  Morten Welinder  <terra@gnome.org>

	* goffice/graph/gog-axis.c (axis_format_value): When using General
	format, limit precision to 9-10 digits.  If you need more, use a
	specific format, but you are probably doing something wrong
	anyway.  This avoids graph ticks of the form "1.10000000000002".

2018-04-29  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2018-04-29  Morten Welinder <terra@gnome.org>

	* Release 0.10.40

2018-04-19  Morten Welinder  <terra@gnome.org>

	* goffice/gtk/go-font-sel.c (gfs_screen_changed): Set a minimum
	size for the family name picker so it's wide enough for 95% of the
	possible values.  (That leaves room for 5% of families with crazy
	names, just in case.)

2018-04-18  Morten Welinder  <terra@gnome.org>

	* goffice/app/go-doc.c (go_doc_finalize): Plug leak.

2018-04-06  Morten Welinder  <terra@gnome.org>

	* goffice/gtk/go-optionmenu.c (go_option_menu_update_contents):
	Handle markup.
	(go_option_menu_init): Add a bit of space between label and
	separator so they don't touch.

2018-03-25  Morten Welinder  <terra@gnome.org>

	* goffice/utils/go-file.c (go_file_get_modtime): New function.

2018-03-14  Morten Welinder  <terra@gnome.org>

	* goffice/math/go-quad.c (go_quad_start): Allocate memory before
	we change fpu state.  Seee bug #794115.
